<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>demo.htv.ati</groupId>
	<version>1.0.8-RELEASE</version>
	<artifactId>hackathoon-services</artifactId>
	<packaging>war</packaging>
	<name>Hackathoon RESTful Serivces</name>
	<description>Hackathoon Light RESTful Serivces</description>
		<properties>
		<!-- Common properties -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- Spring -->
		<org.springframework.version>5.3.18</org.springframework.version>
		<org.springframework-webflow.version>2.4.8.RELEASE</org.springframework-webflow.version>
		<org.springframework.security.version>3.2.5.RELEASE</org.springframework.security.version>
		<org.springframework.security.oauth.version>2.3.6.RELEASE</org.springframework.security.oauth.version>
		
		<!-- Apache CXF -->
		<cxf.version>3.3.4</cxf.version>
		<!-- Apache commons library versions -->
		<commons-attributes-api.version>2.2</commons-attributes-api.version>
		<commons-codec.version>1.10</commons-codec.version>
		<commons-collections.version>3.2.2</commons-collections.version>
		<commons-dbcp.version>1.4</commons-dbcp.version>
		<commons-digester.version>1.8</commons-digester.version>
		<commons-discovery.version>0.5</commons-discovery.version>
		<commons-exec.version>1.3</commons-exec.version>
		<commons-httpclient.version>3.1</commons-httpclient.version>
		<commons-io.version>2.5</commons-io.version>
		<commons-lang.version>2.6</commons-lang.version>
		<commons-logging.version>1.2</commons-logging.version>
		<commons-net.version>2.5</commons-net.version>
		<commons-pool.version>1.6</commons-pool.version>
		<commons-validator.version>1.5.1</commons-validator.version>
		<commons-beanutils.version>1.9.4</commons-beanutils.version>
		<org.apache.httpcomponents.httpmime.version>4.5.2</org.apache.httpcomponents.httpmime.version>
		<org.apache.httpcomponents.httpclient.version>4.5.2</org.apache.httpcomponents.httpclient.version>
		<oracle.version>11.2.0.3</oracle.version>
		<!-- <oracle.version>12.2.0.1</oracle.version> -->
		<!-- Others and Tools -->
		<xstream.version>1.4.15</xstream.version>
		<xml-apis.version>1.4.01</xml-apis.version>
		<beanlib.version>3.2.1</beanlib.version>
		<aopalliance.version>1.0</aopalliance.version>
		<activation.version>1.1.1</activation.version>
		<osworkflow.version>3.0-dev</osworkflow.version>
		<commons-logging-api.version>1.0.4</commons-logging-api.version>
		<antantlr.version>1.6.5</antantlr.version>
		<net.sf.ehcache.version>2.10.5</net.sf.ehcache.version>
		<dom4j.version>1.6.1</dom4j.version>
		
		<!-- Logging -->
		<log4j2.version>2.17.0</log4j2.version>
		<slf4j.version>1.7.29</slf4j.version>
		<jaxws-rt.version>2.3.1</jaxws-rt.version>
		<jaxws-api.version>2.3.1</jaxws-api.version>
		
		<org.bouncycastle.version>1.60</org.bouncycastle.version>
		<org.picketbox.version>4.1.0.Final</org.picketbox.version>
		<junit.version>5.5.2</junit.version>
		<junit.platform.version>1.5.2</junit.platform.version>
		<apache.tiles.version>3.0.8</apache.tiles.version>
		<!-- Plug-ins' versions -->
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
		<maven-war-plugin.version>3.2.3</maven-war-plugin.version>
		<maven-ear-plugin.version>3.0.2</maven-ear-plugin.version>
		<maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
		<aspectj.version>1.8.7</aspectj.version>
		<jackson.version>2.9.9</jackson.version>
		<geronimo.jms.version>1.1.1</geronimo.jms.version>
		<geronimo.j2ee.management.version>1.0.1</geronimo.j2ee.management.version>
		<geronimo.jpa.version>1.0</geronimo.jpa.version>
		<geronimo.servlet.version>1.0</geronimo.servlet.version>
		<geronimo.servlet25.version>1.2</geronimo.servlet25.version>
		<geronimo.transaction.version>1.1.1</geronimo.transaction.version>
		<servlet-api.group>org.apache.geronimo.specs</servlet-api.group>
		<servlet-api.artifact>geronimo-servlet_3.0_spec</servlet-api.artifact>
		<servlet-api.version>1.0</servlet-api.version>
		<servlet-api-2.5.artifact>geronimo-servlet_2.5_spec</servlet-api-2.5.artifact>
		<servlet-api-2.5.version>1.1.2</servlet-api-2.5.version>
		<javax.servlet.version>4.0.1</javax.servlet.version>
		<velocity.version>1.7</velocity.version>
		<woodstox.core.version>5.2.1</woodstox.core.version>
		<wsdl4j.version>1.6.3</wsdl4j.version>
		<wss4j.version>2.1.12</wss4j.version>
		<xerces.version>2.11.0</xerces.version>
		<asm.version>6.2.1</asm.version>
		<jaxb.version>2.3.0</jaxb.version>
		<gson.version>2.8.5</gson.version>
		<guava.version>20.0</guava.version>
		<validation-api.version>2.0.1.Final</validation-api.version>
		<jaxws-ri.version>2.3.0</jaxws-ri.version>
		<commons-csv.version>1.6</commons-csv.version>
		<gson.version>2.8.5</gson.version>
		<!-- Logging -->
		<log4j2.version>2.17.0</log4j2.version>
		<slf4j.version>1.7.29</slf4j.version>
	</properties>
	<dependencies>
			<dependency>
				<groupId>javax.xml.ws</groupId>
				<artifactId>jaxws-api</artifactId>
					<version>${jaxws-api.version}</version>
					<type>jar</type>
					<scope>compile</scope>
					<exclusions>
						<exclusion>
							<groupId>javax.xml.bind</groupId>
							<artifactId>jaxb-api</artifactId>
						</exclusion>
					</exclusions>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${javax.servlet.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${org.springframework.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${org.springframework.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
		<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${org.springframework.version}</version>
				<type>jar</type>
				<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.jws</groupId>
			<artifactId>javax.jws-api</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>${commons-collections.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-core</artifactId>
				<version>${cxf.version}</version>
				<type>jar</type>
				<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<!--logging -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>	
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>9.4.22.v20191022</version>
				<configuration>
					<jvmArgs>-DMAVEN_OPTS="-Xms256m -Xmx1000m -XX:PermSize=128m
						-XX:MaxPermSize=1024m -XX:+CMSPermGenSweepingEnabled"</jvmArgs>
					<reload>manual</reload>
					<webApp>
						<contextPath>/</contextPath>
					</webApp>
					<httpConnector>
						<port>5001</port>
					</httpConnector>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>${maven-war-plugin.version}</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
						</manifest>
						<manifestEntries>
							<DisableIBMJAXWSEngine>true</DisableIBMJAXWSEngine>
						</manifestEntries>
					</archive>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>